applications/example-app-tracing/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-service-tracing
  labels:
    app: example-app-tracing
spec:
  selector:
    app: example-app-tracing
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
