applications/example-app-tracing/base/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-service-tracing
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.frontend.rule.type: PathPrefixStrip
    #traefik.ingress.kubernetes.io/redirect-entry-point: https
    #traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
    - host: app-tracing.kubernetes.local
      http:
        paths:
          - path: /
            backend:
              serviceName: example-service-tracing
              servicePort: 80
